--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,6 +1,6 @@
 #root {
   overflow: hidden;
-background-image: url("https://images.fineartamerica.com/images-medium-large/asphalt-road-background-brandon-bourdages.jpg");
+  background-color: #eee;
   position: relative;
   min-height: 100vh;
 }
