--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,16 +34,73 @@
   }
 }
 
-.NavBar {
+.reserve-btn {
+  color: red;
+}
+
+.tabs {
   display: flex;
-  flex-direction: row;
+  flex-flow: wrap;
+  padding-left: 8%;
 }
 
 .Home {
-    padding-top: 22%;
-    padding-right: 25%;
-    padding-bottom: 22%;
-    background-image: url('https://stopngorentacar.com/wp-content/uploads/luxury-cars_billboard.jpg');
+  background-size: cover;
+  min-height: 100vh;
+  background-image: url('https://nextspirit.club/wp-content/uploads/2019/01/Next-Spirit-Luxury-Car-Rental-Car-rental-VIP-cars-555.jpg');
+}
+.Login {
+  padding-top: 5%;
+  background-size: cover;
+  min-height: 100vh;
+  background-image: url('http://www.falconcarsdubai.com/uploads/4/1/0/6/41068493/973171_orig.jpg');
+}
+.Logout {
+  padding-top: 5%;
+  background-size: cover;
+  min-height: 100vh;
+  background-image: url('http://www.aaarentcars.com/sites/default/files/styles/image_vehicule_fullscreen/public/vehicule_images/img_9242trimedia2.jpg?itok=0PWjp4sz');
+}
+.SignUp {
+  padding-top: 5%;
+  background-size: cover;
+  min-height: 100vh;
+  background-image: url('https://stmed.net/sites/default/files/mercedes-wallpapers-32386-5638916.jpg');
+}
+
+.welcome-card {
+height: auto;
+margin: auto;
+padding: 5%;
+width: 500px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.welcome-msg {
+  font-size: 45px;
+  font-weight: 70;
+  letter-spacing: .1em;
+  font-family: 'Krona One', sans-serif;
+  background: white;
+  padding-top: 10%;
+  padding-bottom: 10%;
+
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.welcome-sub-msg {
+  font-size: 25px;
+  font-weight: 70;
+  padding-top: 10%;
+  letter-spacing: .1em;
+  font-family: 'Open Sans', sans-serif;
+  background: white;
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 
@@ -51,4 +108,21 @@
   background-color: #333;
   color: #eee;
   font-family: 'Krona One', sans-serif;
+}
+
+.logout-btn {
+  margin:1%;
+}
+.reg-btn {
+  margin:5%;
+}
+.logout-form {
+  margin:5%;
+}
+.user-card {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 5%;
 }
