--- a/client/src/styles/car.css
+++ b/client/src/styles/car.css
@@ -1,6 +1,6 @@
 /* ///Car Card/////*/
 #car-card {
-  
+
   box-shadow: 1px 1px 5px 1px #000000;
 }
 
@@ -10,24 +10,34 @@
 }
 
 .Cars {
+  margin-top: 2%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.MyCars {
+  margin-top: 2%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+
+
+
+
+
+.owner-img {
+  width: 40px;
+}
+
+.profile-panels {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
 
-
-
-}
-
-.MyCars {
-   width: 700px;
-   display: flex;
-   justify-content: space-around;
-   flex-direction: row;
-   flex-wrap: wrap;
-   background-color: white;
-}
-
-.owner-img {
-  width: 40px;
 }
