--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,7 +41,6 @@
 .tabs {
   display: flex;
   flex-flow: wrap;
-  padding-left: 60px;
 }
 
 .Home {
@@ -145,4 +144,32 @@ background-color: rgba(0,0,0,0.5) !important;
 .navbar-space {
 
   padding-right: 190px;
+}
+
+.Account-Circle {
+  padding-left: 400px;
+}
+
+.About {
+  padding-top: 12%;
+ background-image: url('https://www.rolls-roycemotorcars.com/content/dam/rollsroyce-website/wraith-ts/share/wraith-share.jpg');
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+ background-size: cover;
+ min-height: 65vh;
+ font-family: 'Krona One', sans-serif;
+ color: white;
+
+}
+
+.about-card {
+margin-left: 18%;
+height: auto;
+padding: 10px;
+width: 800px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.about-msg {
+  color: white;
 }
