--- a/client/src/styles/car.css
+++ b/client/src/styles/car.css
@@ -6,7 +6,7 @@
 
 #car-card:hover {
 
-  box-shadow: 1px 1px 10px 1px #fff;
+  box-shadow: 1px 1px 10px 1px #ccc;
 }
 
 .Cars {
@@ -15,6 +15,7 @@
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .MyCars {
@@ -24,9 +25,6 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
-
-
-
 
 .car-thumbnail {
   width: 60px;
